= v0.6.6 - to be released

= v0.6.5 - 2011-01-14
* enhancements
  * Various fixes for IE
  * Support for Sencha Touch
  * An endpoint can now "call" JavaScript functions that accept multiple parameters, by specifying an array, e.g.:
      {:some_js_function => [arg1, arg2]}
  * New API: +js_mixin+ method to "mixin" JavaScript objects from external files (see RDocs).
  * New JS class +componentLoadMask+ property to configure a mask when a component gets dynamically loaded with +loadComponent+. Accepts the same configuration as Ext.LoadMask.
  * +js_include+ and +css_include+ accept both symbols and strings, where strings would contain full paths to the included file, whereas symbols get expanded to full paths following simple conventions (see RDocs for details).
  * Make some of +Netzke::Core+ setup happen earlier in the loading process, so that we can safely use it while defining components.
  * Performance improvements by memoizing +Base.constantize_class_name+.
  * I18n for actions, see +Netzke::Actions+.

* bug fix
  * The "componentload" event now gets fired after a component is dynamically loaded. The handler receives the instance of the loaded component.
  * Feedback does not insert a new div every time being called
  * JS class caching was broken for name-scoped classes
  * When a component was dynamically loaded into a hidden container, it wasn't shown when the container got shown next time

= v0.6.4 - 2010-11-05
* enhancements
  * Implemented Netzke.isLoading(), useful for testing
  * Persistence support

* API change
  * +endpoint+ DSL call now results in a method called <endpoint_name>_endpoint, _not_ just <endpoint_name> (beware when overriding endpoint definitions, or calling endpoint methods on child components)
  * Using +api+ for endpoint declaration is gone

= v0.6.3 - 2010-11-02
* The +ext_config+ option is back, deprecated.

= v0.6.2 - 2010-10-27