@@ -38,6 +38,7 @@ Gem::Specification.new do |s|
     "features/composition.feature",
     "features/custom_css.feature",
     "features/file_inclusion.feature",
+    "features/i18n.feature",
     "features/inheritance.feature",
     "features/js_include.feature",
     "features/nested_views.feature",
@@ -116,6 +117,7 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/extended_component_with_actions.rb",
     "test/rails_app/app/components/extended_component_with_js_mixin.rb",
     "test/rails_app/app/components/extended_component_with_js_mixin/javascripts/some_method_set.js",
+    "test/rails_app/app/components/extended_localized_panel.rb",
     "test/rails_app/app/components/extended_server_caller.rb",
     "test/rails_app/app/components/hello_world_component.rb",
     "test/rails_app/app/components/included.js",
@@ -123,6 +125,7 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/kinda_complex_component/basic_stuff.rb",
     "test/rails_app/app/components/kinda_complex_component/extra_stuff.rb",
     "test/rails_app/app/components/loader_of_component_with_custom_css.rb",
+    "test/rails_app/app/components/localized_panel.rb",
     "test/rails_app/app/components/scoped_components/deep_scoped_components/some_deep_scoped_component.rb",
     "test/rails_app/app/components/scoped_components/extended_scoped_component.rb",
     "test/rails_app/app/components/scoped_components/some_scoped_component.rb",
@@ -164,6 +167,7 @@ Gem::Specification.new do |s|
     "test/rails_app/config/initializers/secret_token.rb",
     "test/rails_app/config/initializers/session_store.rb",
     "test/rails_app/config/locales/en.yml",
+    "test/rails_app/config/locales/es.yml",
     "test/rails_app/config/routes.rb",
     "test/rails_app/db/development_structure.sql",
     "test/rails_app/db/migrate/20110110132720_create_netzke_component_states.rb",
@@ -220,12 +224,14 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/deprecated/server_caller.rb",
     "test/rails_app/app/components/extended_component_with_actions.rb",
     "test/rails_app/app/components/extended_component_with_js_mixin.rb",
+    "test/rails_app/app/components/extended_localized_panel.rb",
     "test/rails_app/app/components/extended_server_caller.rb",
     "test/rails_app/app/components/hello_world_component.rb",
     "test/rails_app/app/components/kinda_complex_component.rb",
     "test/rails_app/app/components/kinda_complex_component/basic_stuff.rb",
     "test/rails_app/app/components/kinda_complex_component/extra_stuff.rb",
     "test/rails_app/app/components/loader_of_component_with_custom_css.rb",
+    "test/rails_app/app/components/localized_panel.rb",
     "test/rails_app/app/components/scoped_components/deep_scoped_components/some_deep_scoped_component.rb",
     "test/rails_app/app/components/scoped_components/extended_scoped_component.rb",
     "test/rails_app/app/components/scoped_components/some_scoped_component.rb",
