@@ -1,0 +1,11 @@
+# Sample localization file for English. Add more files in this directory for other locales.
+# See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
+
+es:
+  localized_panel:
+    title: Panel Localizada
+    property_one: Primera propriedad
+    property_two: Segunda propriedad
+    action_two: Segunda acción
+    actions:
+      action_one: Primera acción
